--- a/201027-JS-Jquery02/exo1.html
+++ b/201027-JS-Jquery02/exo1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -34,3 +34,5 @@
     
 </body>
 </html>
+
+<!-- un commentaire pour tester les changements  -->
